<resources>
    <string name="app_name">Alpha Defence</string>
    <string name="intro_first_line">Welcome to Alpha Defence</string>
    <string name="btn_login">User Login here</string>
    <string name="btn_user_signUp">New User? Register here </string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="registration_message">new user registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose_country">Choose country</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Rwanda</item>
        <item>Angola</item>


    </string-array>


</resources>
