<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screenbg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            app:srcCompat="@drawable/alpha_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="40sp"
            android:text="@string/user_login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textAlignment="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textColorHint="@color/colorPrimaryDark"
                >
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userPasswordWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textColorHint="@color/colorPrimaryDark"
                >
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_login"
            android:background="@drawable/btnloginbg"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="or"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/userSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_signUp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textAlignment="center"
            />




    </LinearLayout>

</LinearLayout>